tests/diagnostics/expressions/method_calls/arity_mismatch/expect.txt
# exit: 1
input/main.lang0:10:21: error: expected 1 arguments, got 0
      return user.plus()
                      ^
